--- a/src/assets/css/mansicca.css
+++ b/src/assets/css/mansicca.css
@@ -7,17 +7,242 @@ html, body {
     padding:0;
     font: normal normal 15px/120% "Lota Grotesque";
     color: #6e6e6e;
-    background: #fdfdfd;
+    background: #fbfbf7; /* fdfdfd;*/
 }
 
-header svg {
+header {
+   line-height: 60px;
+   vertical-align: middle;
+}
+
+header * {
+    line-height: initial;
+}
+
+header h1 {
    font-family: "Lota Grotesque Alt2";
    font-weight: 900;
-   font-style: italic;
+   margin: 0.5em;
 }
 
-@media only screen and (min-width: 801px) {
+header h1 + p {
+    margin-top: -1.7em;
+    text-transform: lowercase;
+    font-variant: small-caps;
+    font-size: 15px;
+}
 
+header img {
+   margin: 0 0.5em 0.5em 0.5em;
+   float: left;
+}
+
+content {
+    display: block;
+
+    width: 100%;
+    height: calc( 100vH - ( 80px + 20vH ) );
+    min-height: calc( 100vH - ( 80px + 300px ) );
+    max-height: calc( 100vH - ( 80px + 200px ) );
+}
+
+controls {
+    position: fixed;
+    
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    width: 100vw;
+    height: 20vH;
+    min-height: 200px;
+    max-height: 300px;
+
+    z-index: 255;
+
+    background: #aad;
+    box-shadow: -2px 0px 4px 0px rgba(0,0,0,0.4);
+
+    font: normal 24px/120% "Lota Grotesque";
+}
+
+controls button {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    float: left;
+    color: #fff;
+}
+
+controls button.negative, 
+controls button.positive {
+    width: 40%;
+}
+
+controls button.negativeAmbiguous,
+controls button.positiveAmbiguous {
+    width: 10%;
+}
+
+controls button.positive {
+    background: 
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3) 55%,
+            rgba(0,0,0,0.0)
+        ),
+        linear-gradient(
+            #53a65b,
+            #53a65b
+        );
+}
+
+controls button.positive:active,
+controls button.positive.active
+{
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3)
+        ),
+        linear-gradient(
+            #53a65b,
+            #53a65b
+        );
+}
+
+controls button.negative {
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3) 55%,
+            rgba(0,0,0,0.0)
+        ),
+        linear-gradient(
+            #bb1f1f,
+            #bb1f1f
+        );
+}
+
+controls button.negative:active,
+controls button.negative.active {
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3)
+        ),
+        linear-gradient(
+            #bb1f1f,
+            #bb1f1f
+        );
+}
+
+controls button.positiveAmbiguous {
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3) 55%,
+            rgba(0,0,0,0.0)
+        ),
+        repeating-linear-gradient(
+            -45deg,
+            #53a65b,
+            #53a65b 15px,
+            #bb1f1f 15px,
+            #bb1f1f 20px
+        );
+}
+
+controls button.positiveAmbiguous:active,
+controls button.positiveAmbiguous.active {
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3)
+        ),
+        repeating-linear-gradient(
+            -45deg,
+            #53a65b,
+            #53a65b 15px,
+            #bb1f1f 15px,
+            #bb1f1f 20px
+        );
+}
+
+controls button.negativeAmbiguous {
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3) 55%,
+            rgba(0,0,0,0.0)
+        ),
+        repeating-linear-gradient(
+            -45deg,
+            #bb1f1f,
+            #bb1f1f 15px,
+            #53a65b 15px,
+            #53a65b 20px
+        );
+}
+
+controls button.negativeAmbiguous:active,
+controls button.negativeAmbiguous.active {
+    background:
+        linear-gradient(
+            0deg,
+            rgba(0,0,0,0.0),
+            rgba(0,0,0,0.3)
+        ),
+        repeating-linear-gradient(
+            -45deg,
+            #bb1f1f,
+            #bb1f1f 15px,
+            #53a65b 15px,
+            #53a65b 20px
+        );
+}
+
+controls button.negativeAmbiguous p,
+controls button.positiveAmbiguous p
+{
+   display: none;
+}
+
+controls button em {
+    font-size: 18px;
+    line-height: 120%;
+    display: block;
+}
+
+controls button svg {
+    font-family: "Lota Grotesque Alt2";
+    font-weight: 900;
+    font-style: italic;
+
+    width: 40px;
+    height: auto;
+
+    display: none;
+}
+
+
+@media only screen and (min-width: 801px) {
+    controls button svg {
+       display: inline;
+    }
+
+    controls button.negativeAmbiguous p,
+    controls button.positiveAmbiguous p
+    {
+       display: block;
+    }
 }
 
 @media only screen and (min-width: 1201px) {
