--- a/src/assets/css/mansicca.css
+++ b/src/assets/css/mansicca.css
@@ -10,9 +10,81 @@ html, body {
     background: #fbfbf7; /* fdfdfd;*/
 }
 
+username input {
+    display: block;
+
+    font: bold 32px/40px "Lota Grotesque";
+    text-align: center;
+    
+    border: 1px solid #6e6e6e;
+    border-radius: 5px;
+    padding: 8px 4px 4px 4px;
+    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.3);
+
+    height: 52px;
+    width: 80vW;
+    min-width: 320px;
+    max-width: 600px;
+}
+
+username {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    z-index: 110;
+    top: 0; right: 0; bottom: 0; left: 0;
+
+    width: 100vW;
+    height: 100vH;
+    
+    background: #fbfbf7;
+    opacity: 0.8;
+
+    transition: opacity 0.7s, z-index 0.01s 0.7s;
+}
+
+username.inactive {
+    /*opacity: 0;*/
+    z-index: 0;
+    
+    height: 50px;
+    width: 300px;
+    max-width: 80vW;
+
+    position: static;
+    float: right;
+}
+
+username.inactive input {
+    font: normal italic 13px/120% "Source Sans Pro";
+    text-align: right;
+    color: #707070;
+
+    width: 100px;
+    height: 20px;
+
+    margin: 0 10px 0 0;
+    padding: 0;
+
+    border: none;
+    box-shadow: none;
+    background: transparent;
+}
+
+username:not(.inactive) + header {
+    /*position: absolute;
+    z-index: 130;
+    width: 40vW;*/
+
+}
+
 header {
    line-height: 60px;
    vertical-align: middle;
+
+   /*transition: margin-left:*/
 }
 
 header * {
@@ -58,7 +130,7 @@ controls {
     /*min-height: 200px;*/
     max-height: 200px;
 
-    z-index: 255;
+    z-index: 100;
 
     background: #aad;
     box-shadow: -2px 0px 4px 0px rgba(0,0,0,0.4);
