--- a/src/assets/css/content-instagram.css
+++ b/src/assets/css/content-instagram.css
@@ -49,3 +49,32 @@ content.instagram img {
     height: calc( 100% * (100 / 155) );
     background: #ffa;
 }
+
+content.instagram div.caption {
+    padding: 8px;
+
+    height: calc( 100% - ( ( 100% * (100 / 155) ) + 50px ) );
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+content.instagram div.caption::before {
+    content: "some_user: ";
+    font-weight: bold;
+}
+
+content.instagram div.caption::after {
+    /* “fade out” the text in case it is longer than the div */
+    content: " ";
+
+    display: block;
+
+    position: absolute;
+    left: 0; right: 0;
+    top: auto; bottom: 0;
+
+    width: 100%;
+    height: 40px;
+
+    background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1));
+}
