--- a/src/assets/css/mansicca.css
+++ b/src/assets/css/mansicca.css
@@ -264,10 +264,10 @@ controls button.positiveAmbiguous {
             -45deg,
             #53a65b,
             #53a65b 15px,
-            /*#bb1f1f 15px,
-            #bb1f1f 20px*/
-            #707070 15px,
-            #707070 20px
+            #bb1f1f 15px,
+            #bb1f1f 20px 
+            /*#707070 15px,
+            #707070 20px*/
         );
 }
 
@@ -283,10 +283,10 @@ controls button.positiveAmbiguous.active {
             -45deg,
             #53a65b,
             #53a65b 15px,
-            /*#bb1f1f 15px,
-            #bb1f1f 20px*/
-            #707070 15px,
-            #707070 20px
+            #bb1f1f 15px,
+            #bb1f1f 20px
+            /*#707070 15px,
+            #707070 20px*/
         );
 }
 
@@ -302,10 +302,10 @@ controls button.negativeAmbiguous {
             -45deg,
             #bb1f1f,
             #bb1f1f 15px,
-            /*#53a65b 15px,
-            #53a65b 20px*/
-            #707070 15px,
-            #707070 20px
+            #53a65b 15px,
+            #53a65b 20px
+            /*#707070 15px,
+            #707070 20px*/
         );
 }
 
@@ -321,10 +321,10 @@ controls button.negativeAmbiguous.active {
             -45deg,
             #bb1f1f,
             #bb1f1f 15px,
-            /*#53a65b 15px,
-            #53a65b 20px*/
-            #707070 15px,
-            #707070 20px
+            #53a65b 15px,
+            #53a65b 20px
+            /*#707070 15px,
+            #707070 20px*/
         );
 }
 
